[gd_scene load_steps=8 format=2]

[ext_resource path="res://PressurePlate.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.258824, 0.101961, 0.129412, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.0126, 3.3493 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.9419, 1.97881 )

[node name="PressurePlate" type="Node2D"]
script = ExtResource( 1 )

[node name="PushyThing" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.0117188, 4.48222 )
texture = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 1048575
collision_mask = 1048575

[node name="Pad" type="Sprite" parent="StaticBody2D"]
position = Vector2( 0, -4 )
scale = Vector2( 0.015625, 8 )
texture = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.222725, -4.00904 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1048575
collision_mask = 2148532223

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0624886, -10.1462 )
shape = SubResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
